--- a/{{cookiecutter.service_name}}/build.gradle
+++ b/{{cookiecutter.service_name}}/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.miempresa.{{package_name}}'
+group = 'com.miempresa.{{cookiecutter.package_name}}'
 version = '0.0.1-SNAPSHOT'
 
 java {
