--- a/{{cookiecutter.service_name}}/src/main/resources/application.properties
+++ b/{{cookiecutter.service_name}}/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=arquetipo-java-spring-boot
+spring.application.name=msa-producer
+clients.customerAccount.url: http://localhost:8081
