--- a/.github/workflows/create-microservice.yml
+++ b/.github/workflows/create-microservice.yml
@@ -22,7 +22,7 @@ on:
       contactOpenApi:
         description: 'Contenido del contrato'
         required: true
-        type: string	
+        type: string
 
 jobs:
   generate-microservice:
@@ -31,8 +31,9 @@ jobs:
     steps:
       - name: Checkout workflow repo
         uses: actions/checkout@v4
+
       - name: Usar el output
-        run: echo "Tag generado hugo"  
+        run: echo "Tag generado hugo"
 
       - name: Install Cookiecutter
         run: pip install cookiecutter
@@ -41,12 +42,11 @@ jobs:
         run: |
           cookiecutter https://github.com/hugomauricio/arquetipo-java-spring-boot \
             --no-input \
-            service_name='${{ github.event.inputs.service_name }}'	\
-            package_name='${{ github.event.inputs.package_name }}'	\
-            description='${{ github.event.inputs.description }}'	\
-	    	isContract='${{ github.event.inputs.isContract }}'	\
-            contactOpenApi='${{ github.event.inputs.isContract }}'
-
+            service_name='${{ github.event.inputs.service_name }}' \
+            package_name='${{ github.event.inputs.package_name }}' \
+            description='${{ github.event.inputs.description }}' \
+            isContract='${{ github.event.inputs.isContract }}' \
+            contactOpenApi='${{ github.event.inputs.contactOpenApi }}'
 
       - name: Create new repository via GitHub API
         env:
@@ -59,7 +59,7 @@ jobs:
             -H "Authorization: token $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/user/repos \
-            -d "{\"name\":\"$REPO_NAME\", \"private\":true, \"description\":\"$REPO_DESC\"}"
+            -d "{\"name\":\"$REPO_NAME\",\"private\":true,\"description\":\"$REPO_DESC\"}"
 
       - name: Push generated code to new repo
         env:
@@ -67,12 +67,12 @@ jobs:
           REPO_NAME: ${{ github.event.inputs.service_name }}
           OWNER: ${{ github.repository_owner }}
         run: |
-          cd $REPO_NAME
+          cd "$REPO_NAME"
           git init
-          git remote add origin https://x-access-token:$GH_TOKEN@github.com/hugomauricio/$REPO_NAME.git
-          git add .
           git config user.email "sacaquirinmoscoso@gmail.com"
           git config user.name "Automation Bot"
+          git add .
           git commit -m "Initial commit from template"
           git branch -M main
+          git remote add origin "https://x-access-token:$GH_TOKEN@github.com/$OWNER/$REPO_NAME.git"
           git push -u origin main
