--- a/{{cookiecutter.service_name}}/pom.xml
+++ b/{{cookiecutter.service_name}}/pom.xml
@@ -122,8 +122,8 @@
 						<configuration>
 							<generatorName>spring</generatorName>
 							<inputSpec>${project.basedir}/src/main/resources/openapi.json</inputSpec>
-							<apiPackage>com.nttdata.services.server</apiPackage>
-							<modelPackage>com.nttdata.services.server.models</modelPackage>
+							<apiPackage>com.test.services.server</apiPackage>
+							<modelPackage>com.test.services.server.models</modelPackage>
 							<library>spring-boot</library>
 <!--							<templateDirectory>${maven.multiModuleProjectDirectory}/src/main/resources/openapi-templates/client</templateDirectory>-->
 							<generateApiTests>false</generateApiTests>
@@ -139,9 +139,9 @@
 								<openApiNullable>false</openApiNullable>
 								<apiFirst>false</apiFirst>
 								<delegatePattern>true</delegatePattern>
-								<configPackage>com.nttdata.services.config</configPackage>
+								<configPackage>com.test.services.config</configPackage>
 								<sourceFolder>src/main/java</sourceFolder>
-								<basePackage>com.nttdata</basePackage>
+								<basePackage>com.test</basePackage>
 								<disallowAdditionalPropertiesIfNotPresent>true
 								</disallowAdditionalPropertiesIfNotPresent>
 								<interfaceOnly>true</interfaceOnly>
@@ -157,8 +157,8 @@
 						<configuration>
 							<generatorName>spring</generatorName>
 							<inputSpec>${project.basedir}/src/main/resources/openapi-client.json</inputSpec>
-							<apiPackage>com.nttdata.services.rest.client</apiPackage>
-							<modelPackage>com.nttdata.services.rest.client.models</modelPackage>
+							<apiPackage>com.test.services.rest.client</apiPackage>
+							<modelPackage>com.test.services.rest.client.models</modelPackage>
 							<library>spring-cloud</library>
 							<generateApiTests>false</generateApiTests>
 							<generateModelTests>false</generateModelTests>
@@ -176,7 +176,7 @@
 								<useTags>true</useTags>
 								<hideGenerationTimestamp>true</hideGenerationTimestamp>
 								<sourceFolder>src/main/java</sourceFolder>
-								<configPackage>com.nttdata.services.rest.client.config</configPackage>
+								<configPackage>com.test.services.rest.client.config</configPackage>
 							</configOptions>
 						</configuration>
 					</execution>
